# notego

./: .gitignore  CHANGELOG.md  Cargo.toml  EXAMPLE.md  FRONTMATTER_GUIDE.md  QUICKSTART.md  README.md  TEST_RESULTS.md  example.sh
src/: main.rs
