[package]
name = "notego"
version = "0.2.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Export Apple Notes to Markdown files"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
slug = "0.1"
html2md = "0.2"
regex = "1.10"
base64 = "0.21"
anyhow = "1.0"
